src/test/deca/context/invalid/with-object/instanceof_op_wrong_left2.deca
class A{}

{
    A a = new A();
    true instanceof A;
}